--- a/priv/www/js/tmpl/boot_steps_visualiser.ejs
+++ b/priv/www/js/tmpl/boot_steps_visualiser.ejs
@@ -1,10 +1,13 @@
-<h1>Boot Steps</h1>
 <style type="text/css" media="screen">
 #bootsteps {
   border: 2px solid #FF8C00;
   padding: 2px;
 }
 </style>
+<h1>Boot Steps</h1>
+<p>Below you see a Graph representing the bootsteps used by the
+current RabbitMQ instance. Use your mouse to move the graph around,
+and the mouse wheel to zoom in/out.</p>
 <div id="bootsteps"></div>
 <%
 $.ajax({
